# accordserver

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  RAILWAY_TEMPLATE.md  README.md  build.rs  docker-compose.postgres.yml  docker-compose.yml  railway.json
.github/workflows/: desktop-release.yml  docker-publish.yml  test.yml
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: app_config.rs  main.rs  paths.rs  sidecar.rs  updater.rs
docs/: seo.md
migrations/: 001_initial_schema.sql  002_expand_schema.sql  003_space_invites_and_public.sql  006_space_slugs.sql  007_message_search_indexes.sql  008_emoji_images_and_soundboard.sql  009_threads.sql  010_drop_sfu_nodes.sql  011_server_settings.sql  012_admin_management.sql  013_two_factor_auth.sql  014_channel_mutes.sql  015_reports.sql  016_relationships.sql  017_audit_log.sql  017_read_states.sql  018_forum_title.sql  019_plugins.sql  020_tos.sql  021_guest_auth.sql  022_allow_guest_access.sql  023_audit_log.sql  024_plugin_leaderboards.sql  026_space_introductions.sql  027_federation.sql  028_federation_replica.sql  029_federation_emoji.sql
migrations/postgres/: 001_initial_schema.sql  002_forum_title.sql  003_plugins.sql  004_tos.sql  005_guest_auth.sql  006_fix_guest_tokens_columns.sql  007_allow_guest_access.sql  008_audit_log.sql  009_plugin_leaderboards.sql  010_fix_channel_last_message_id.sql  011_space_introductions.sql  012_federation.sql  013_federation_replica.sql  014_federation_emoji.sql
src/: config.rs  error.rs  lib.rs  main.rs  master.rs  mentions.rs  presence.rs  sfu_client.rs  sfu_runtime.rs  slug.rs  snowflake.rs  state.rs  storage.rs  unfurl.rs
src/db/: admin.rs  attachments.rs  audit_log.rs  auth.rs  bans.rs  channels.rs  dm_participants.rs  emojis.rs  federation.rs  invites.rs  members.rs  messages.rs  mod.rs  mutes.rs  permission_overwrites.rs  plugin_leaderboards.rs  plugins.rs  read_states.rs  relationships.rs  reports.rs  roles.rs  settings.rs  sfu.rs  soundboard.rs  spaces.rs  users.rs
src/federation/: apply.rs  authority.rs  dm.rs  forward.rs  handshake.rs  identity.rs  inbox.rs  mapping.rs  mod.rs  outbound.rs  peers.rs  sender.rs  signatures.rs  verify.rs  wellknown.rs
src/gateway/: dispatcher.rs  events.rs  heartbeat.rs  intents.rs  mod.rs  session.rs
src/mcp/: mod.rs  tools.rs
src/middleware/: auth.rs  mod.rs  permissions.rs  rate_limit.rs
src/models/: application.rs  attachment.rs  channel.rs  embed.rs  emoji.rs  interaction.rs  invite.rs  member.rs  message.rs  mod.rs  mute.rs  permission.rs  plugin.rs  presence.rs  role.rs  settings.rs  soundboard.rs  space.rs  user.rs  voice.rs
src/routes/: admin.rs  applications.rs  audit_log.rs  auth.rs  bans.rs  channels.rs  emojis.rs  gateway.rs  health.rs  interactions.rs  invite_page.rs  invites.rs  landing.rs  members.rs  messages.rs  mod.rs  mutes.rs  plugins.rs  reactions.rs  read_states.rs  relationships.rs  reports.rs  roles.rs  seo.rs  settings.rs  sfu.rs  soundboard.rs  spaces.rs  system_messages.rs  test_seed.rs  users.rs  voice.rs
src/voice/: embedded_sfu.rs  livekit.rs  mod.rs  sfu.rs  signaling.rs  state.rs
tests/: README.md  e2e.rs  federation.rs  http.rs  security.rs  sfu.rs  ws.rs
tests/common/: mod.rs
