[package]
name = "accordserver"
version = "0.1.19"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = { version = "0.3", features = ["sink"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
argon2 = "0.5"
livekit-api = "0.4.14"
arc-swap = "1"
totp-rs = { version = "5", features = ["gen_secret"] }
data-encoding = "2"
aes-gcm = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }

[[bin]]
name = "accordserver"
path = "src/main.rs"

[[bin]]
name = "accord-seed"
path = "src/bin/seed.rs"

[[bin]]
name = "accord-migrate-pg"
path = "src/bin/migrate_to_postgres.rs"

[features]
# Enable the /test/seed HTTP endpoint. Never set this in production builds.
test-seed = []

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.28"
http = "1"
serial_test = "3"
