[package]
name = "accord-desktop"
version = "0.1.21"
edition = "2021"
description = "Accord chat & voice server — desktop tray app"
rust-version = "1.77"

[lib]
name = "accord_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "accord-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
directories = "5"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
